--- a/CSS/style.css
+++ b/CSS/style.css
@@ -6,12 +6,45 @@
     box-sizing: border-box;
 }
 
+body{
+    max-width: 100vw;
+    overflow-x: hidden;
+}
+
+/* this is your container */
+.full-section-dimensions{
+    min-height: 90vh;
+    max-height: auto;
+    background-color: #123456;
+}
+
+.half-section-dimensions{
+    min-height: 50vh;
+    max-height: auto;
+    background-color: #123456;
+}
+
+img{
+    aspect-ratio: 1;
+    object-fit: cover;
+    object-position: center;
+}
+
+h2{
+    text-align: center;
+}
+
 .navbar {
-    background-color: black;
+    opacity: 0.5;
+    & img[alt="logo"] {
+        width: 5rem;
+    }
 }
 
-.navbar-nav a{
-
-
-    color: white;
+.landing{
+    background-image: url(https://ismaaeel-a.github.io/allimages/Images/pikachu_artwork.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    border-bottom: 3px solid rgb(255, 255, 255);
 }
+
