--- a/CSS/style.css
+++ b/CSS/style.css
@@ -6,6 +6,10 @@
     box-sizing: border-box;
 }
 
+::-webkit-scrollbar {
+    display: none;
+}
+
 body{
     max-width: 100vw;
     overflow-x: hidden;
@@ -15,13 +19,17 @@ body{
 .full-section-dimensions{
     min-height: 90vh;
     max-height: auto;
+    width: 100vw;
     background-color: #123456;
 }
 
+.container-fluid{
+    padding: 0;
+}
 .half-section-dimensions{
     min-height: 50vh;
     max-height: auto;
-    background-color: #123456;
+    background-color: #4de364;
 }
 
 img{
@@ -30,12 +38,12 @@ img{
     object-position: center;
 }
 
+
 h2{
     text-align: center;
 }
 
 .navbar {
-    opacity: 0.5;
     & img[alt="logo"] {
         width: 5rem;
     }
@@ -45,6 +53,15 @@ h2{
     background-image: url(https://ismaaeel-a.github.io/allimages/Images/pikachu_artwork.jpg);
     background-repeat: no-repeat;
     background-size: cover;
-    border-bottom: 3px solid rgb(255, 255, 255);
+   /*  border-bottom: 3px solid rgb(255, 255, 255); */
+    width: 100vw;
 }
 
+
+footer{
+    border-top: 3px solid black;
+    background-color: rgb(66, 10, 66);
+    text-align: center;
+    padding-top: 1rem;
+    color: silver;
+}
