--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,3 +1,5 @@
+@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css");
+
 *,
 *::before,
 *::after {
@@ -9,6 +11,8 @@
 :root {
     --primary: #210009;
     --secondary: #00ffae;
+    --accent: #000000;
+    --alt: rgb(108, 28, 117);
 }
 
 ::-webkit-scrollbar {
@@ -29,13 +33,13 @@ body {
     min-height: 90vh;
     max-height: auto;
     width: 100vw;
-    background-color: var(--secondary);
+    background-color: var(--accent);
 }
 
 .half-section-dimensions {
     min-height: 50vh;
     max-height: auto;
-    background-color: var(--secondary);
+    background-color: var(--accent);
 }
 
 img {
@@ -45,18 +49,20 @@ img {
 }
 
 
-h1,h2 {
+h1,
+h2,
+h4 {
     text-align: center;
 }
 
 .navbar {
-    background-color: #1a1a1a;
+    background-color: var(--alt);
 
-    & a{
+    & a {
         color: silver;
 
-        &:hover{
-            color: chartreuse;
+        &:hover {
+            color: rgb(127, 255, 0);
         }
     }
 
@@ -67,15 +73,27 @@ h1,h2 {
 
 footer {
     border-top: 3px solid black;
-    background-color: var(--primary);
+    background-color: var(--alt);
     text-align: center;
     padding-top: 1rem;
     color: silver;
 }
 
-.accordion-item {
-    background-color: var(--secondary);
+.accordion {
+    & button {
+        background-color: black;
+
+        &:active {
+            background-color: rgb(81, 255, 0);
+        }
+    }
+
+    & * {
+        background-color: var(--accent);
+        color: silver;
+    }
 }
+
 
 form {
     background-color: var(--primary);
@@ -93,14 +111,70 @@ form {
     
 } */
 
-.height{
+.height {
     height: 30vh;
 }
 
-.welcome{
-    & h1{
-        font-size: 2rem;
-        text-wrap: wrap;
-        line-height: 15rem;
+.heightx2 {
+    height: 60vh;
+}
+
+.welcome {
+    /* background-color: var(--alt); */
+    /* background: url(https://ismaaeel-a.github.io/allimages/Images/bgvid.mp4); */
+    & h1 {
+        font-size: 3.5rem;
+        padding: 0.5rem;
     }
+
+    & p {
+        text-align: center;
+        font-size: 2rem;
+    }
+}
+
+.landing-carousel {
+    padding: 0;
+    margin: 0;
+}
+
+.carousel-item {
+
+    /* background-color: #210009; */
+    height: 60vh;
+
+    & img {
+        object-fit: cover;
+        object-position: center;
+    }
+}
+
+
+/* .slogan {
+    animation: highlight 6s infinite;
+}
+
+@keyframes highlight {
+    25% {
+        color: red;
+
+        & p{
+            font-size: 4rem;
+        }
+    }
+
+    50% {
+        color: violet;
+    }
+
+    75% {
+        color: darkgreen;
+    }
+
+} */
+
+.card1 {
+    width: 12rem;
+    height: 17rem;
+    background-color: #00ffae;
 }
